# TRADING-EASYLY

./: .env.example  .gitignore  ACTION_PLAN.md  API_STATUS.md  API_TEST_RESULTS.md  BOT_IS_LIVE.md  BOT_STATUS.md  BOT_WORKING.md  COMMERCIAL_BOT_GUIDE.md  COMMERCIAL_SUMMARY.md  CONTRIBUTING.md  CUSTOMER_DISCOVERY.md  DEMO_VS_REAL.md  DEPLOYMENT.md  DEPLOYMENT_MPESA.md  DEPLOY_NOW.py  DEPLOY_NOW_RENDER.md  DERIV_CHECKLIST.md  DERIV_INTEGRATION.md  DERIV_README.md  DERIV_SETUP.md  DERIV_UPDATE_SUMMARY.md  Dockerfile  FINAL_REPORT.md  GITHUB_COMPLETE.md  GITHUB_LAUNCH.md  GITHUB_SETUP.md  HOW_TO_SELL.md  INDEX.md  INSTALL.md  LICENSE  MPESA_INTEGRATION.md  MPESA_READY_TO_LAUNCH.md  ONLINE_READY.md  PUSH_TO_GITHUB.md  Procfile  QUICKSTART.py  QUICK_REFERENCE.md  QUICK_START_TRADING.md  README.md  (+36 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
examples/: deriv_quickstart.py
src/trading_bot/: main.py
src/trading_bot/backtest/: backtester.py
src/trading_bot/config/: settings.py
src/trading_bot/data/: data_fetcher.py
src/trading_bot/payments/: __init__.py  mpesa.py
src/trading_bot/strategies/: advanced_strategies.py  ma_strategy.py
src/trading_bot/subscription/: __init__.py  license.py  models.py
src/trading_bot/utils/: logger.py
